Fixed toc spacing issues.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@
 //
 
 // Colors
-$blue: #4183C4;
+$blue: #57A3E8;
 
 // Grays
 $black: #000;
