--- a/style.scss
+++ b/style.scss
@@ -40,15 +40,13 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: $lato;
-    color: $darkerGray;
+    color: $darkGray;
     font-weight: 300;
-
-  line-height: 1.7;
-  padding: 0;
-
-  @include mobile {
-    line-height: 1.4;
-  }
+    line-height: 1.7;
+    padding: 0;
+    @include mobile {
+        line-height: 1.4;
+    }
 }
 
 h1 {
@@ -210,7 +208,7 @@ img {
 
 .posts > .post {
     padding: 1em 0;
-  border-bottom: 1px solid $lightGray;
+    border-bottom: 1px solid $lightGray;
   
   .post-title {
     text-align: left;
@@ -270,10 +268,23 @@ img {
 
 .post .entry {
     h2 {
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid $lightGray;
         line-height: 1.2em;
+        text-align: center;
+        margin-bottom: 0.4em;
     }
+}
 
+.post .entry > * {
+    margin-left: 24px;
+    margin-right: 14px;
+}
+
+.post .entry > h1,
+.post .entry > h2,
+.post .entry > .toc {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .post-nav > * {
@@ -340,8 +351,9 @@ img {
 /* ==========================================================================
    toc
    ========================================================================== */
-.toc {
+.post .entry > .toc {
     position: static;
+    top: 0;
     width: 260px;
     max-height: 100%;
     margin-left: -300px;
@@ -349,6 +361,11 @@ img {
     float: left;
     font-weight: 300;
     font-size: 0.9em;
+}
+
+.post .entry > span {
+    /** hide auto generated toc sections */
+    display: none;
 }
 
 .toc ul {
@@ -403,21 +420,12 @@ img {
         display: none;
     }
 }
-   
+
 @media only screen and (max-width: 700px) {
-    h1, h2 {
-        font-size: 3rem;
-        line-height: 1.1em;
-        letter-spacing: -1px;
+    .post .entry > * {
+        margin-left: 0;
+        margin-right: 0;
     }
-
-    h3 {
-        font-size: 2.8rem;
-    }
-
-    h4 {
-        font-size: 2.3rem;
-    }  
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
